# openclaw-manager

./: .gitignore  CHANGELOG.md  CODEX-TASK.md  README.md  REFACTOR-TASK.md  TASK-DAY2.md  eslint.config.js  package.json  pnpm-lock.yaml  tasks-day4.md  vite.config.ts  vitest.config.ts
docs/: 产品交付文档.md  用户使用说明书.md  管理员使用说明书.md
scripts/: generate-icon.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs  migration.rs  platform.rs
src-tauri/src/commands/: app_info.rs  backup.rs  config.rs  health.rs  mod.rs  process.rs  skills.rs  system.rs
src/components/: EmptyState.tsx  ErrorBoundary.tsx  OnboardingGuide.tsx
src/contexts/: I18nContext.tsx  ThemeContext.tsx
src/hooks/: useAbortable.ts  useErrorHandler.ts  useGateway.ts  useThemeStyles.ts
src/i18n/: index.test.ts  index.ts
src/layouts/: MainLayout.tsx
src/pages/Agents/: WizardSteps.tsx  index.tsx  platforms.ts
src/pages/Backup/: index.tsx
src/pages/Channels/: data.tsx  index.tsx  types.ts
src/pages/Chat/: index.tsx
src/pages/Config/: index.tsx
src/pages/Dashboard/: index.tsx
src/pages/Health/: index.tsx
src/pages/Models/: data.ts  index.tsx  types.ts
src/pages/Settings/: index.tsx
src/pages/Setup/: index.tsx
src/pages/Skills/: index.tsx
src/services/: gateway.ts  tauri.test.ts  tauri.ts
src/stores/: appStore.ts  gatewayStore.ts
src/test/: setup.ts
src/types/: config.ts  errors.ts  gateway.ts  index.ts  openclaw.ts
src/utils/: index.ts
(+6 files in other folders)
