[package]
name = "openclaw-manager"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
dirs = "5"
tokio = { version = "1", features = ["full"] }
