[package]
name = "openclaw-manager"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
dirs = "5"
fs2 = "0.4"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tar = "0.4"
aes-gcm = "0.10"
rand = "0.8"
pbkdf2 = "0.12"
sha2 = "0.10"
